<resources>
    <string name="app_name">Blood Donation App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification_channel_id">default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="raised_requests">Raised Requests</string>
    <string name="my_requests">My Requests</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="new_here_sign_up_instead">New here? Sign-Up instead</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="hello_there_welcome_back">Hello there,welcome back</string>
    <string name="get_on_board">Get on board</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="raise_request">Raise Request</string>
    <string name="patient_details">Patient Details</string>
    <string name="blood_group">Blood Group</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="post_request">Post Request</string>
    <string name="required_units">Required Units</string>
    <string name="details_additional">Details(Additional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="filter">Filter</string>
    <string name="ask_to_donate">Ask to donate</string>
    <string name="donor_registration">Donor Registration</string>
    <string name="register">Register</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="hospitals">Hospitals</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="blood_group_heading">Blood Group:</string>
    <string name="address_heading">Address:</string>
    <string name="donor">DONOR</string>
    <string name="receiver">RECEIVER</string>
    <string name="notifications">Notifications</string>
    <string name="create_a_new_feed">Create a New Feed</string>
    <string name="upload_image">Upload Image</string>
    <string name="update_feed">Update Feed</string>
    <string name="type_a_message">Type a message</string>
    <string name="gps_network_not_enabled">Enable GPS to access Maps</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="content_description">Content Description</string>

    <string name="id_proof">ID Proof</string>
    <string name="additional_message">Additional Message</string>
    <string name="medical_document">Medical Document</string>
    <string name="switch_to_admin_side">Switch to admin side</string>
    <string name="switch_to_user_side">Switch to user side</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="registered_blood_donors">Registered Blood Donors</string>
    <string name="chats">Chats</string>
    <string name="current_location">Current location</string>
    <string name="specific_location">Specific location</string>
    <string name="filter_by_distance_from">Filter by distance from:</string>
<<<<<<< HEAD
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="register_as_donor">Register as donor</string>
=======
    <string name="curr_loc">Current Location</string>
>>>>>>> 1ce710e8cb13dc618b26c1bd0fb1885acaabb87d


</resources>