<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <View
            android:layout_width="30dp"
            android:layout_gravity="center"
            android:layout_height="5dp"
            android:background="@color/red"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/donor_registration" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:editable="false"
            android:textSize="15dp"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:inputType="number"
            android:editable="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:hint="Contact Number"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:editable="false"
            android:layout_width="match_parent"
            android:inputType="number"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:hint="Email"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:layout_width="match_parent"
            android:inputType="number"
            android:textSize="15dp"
            android:hint="Age"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/blood_group"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/blood_group"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:textSize="15dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:hint="@string/location"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/upload_documents"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="35dp"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:hint="@string/upload_documents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <CheckBox
            android:id="@+id/isPublic"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Want to be publicly visible to all users." />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="35dp"
            android:text="@string/register" />
    </LinearLayout>
</ScrollView>