<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/grey"
        android:layout_marginRight="35dp"
        android:textSize="30dp"
        android:text="@string/get_on_board"
        android:layout_marginBottom="100dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="60sp"
        android:layout_marginRight="35dp"
        android:hint="@string/enter_name"
        app:startIconDrawable="@drawable/ic_baseline_person_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_no_txt_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="35dp"
        android:hint="@string/enter_phone_number"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:prefixText="+91"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_txt_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="35dp"
        android:hint="@string/enter_email_id"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:textColor="#CD0000"
        android:layout_marginRight="35dp"
        android:textSize="15dp"
        android:padding="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:elevation="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sign_up"
            android:background="@drawable/button_style"
            android:textSize="12sp" />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>

</androidx.appcompat.widget.LinearLayoutCompat>