<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesAdmin.RequestDetailAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/toolbar_style"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_notification">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="left"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/dialog_box_main"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="35dp"
                    android:text="@string/patient_details"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="17dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/patient_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="Age"
                    android:inputType="number"
                    android:padding="17dp"
                    android:textSize="15dp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/patient_blood_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:cursorVisible="false"
                        android:editable="false"
                        android:hint="@string/blood_group"
                        android:padding="17dp"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/required_units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/required_units"
                    android:inputType="number"
                    android:padding="17dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/location"
                    android:padding="17dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/documents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/medical_document"
                    android:padding="17dp"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/id_proof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/id_proof"
                    android:padding="17dp"
                    android:textSize="15dp" />


                <TextView
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="13sp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/edit_text_background"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:hint="@string/details_additional"
                    android:padding="17dp"
                    android:textSize="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="35dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:text="Received"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:text="Cancel Request"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>